kubeadm/ingress/webapp-deployement.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webapp
spec:
  replicas: 2
  selector:
    matchLabels:
      app: webapp
  template: 
    metadata: 
      labels:
        app: webapp
    spec:
      containers: 
      - name: webapp
        image: nginx:latest
        ports:
        - containerPort: 80
