kubeadm/ingress/webapp-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webapp
spec: 
  selector:
    app: webapp
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
